// Vitest Snapshot v1

exports[`ApolloParser > should parse "/home/data/readonly/Group Trip/videos/Group Trip - Some Interesting Video-1.mp4" 1`] = `
{
  "audio": [],
  "coding": [],
  "collection": false,
  "extension": ".mp4",
  "fileType": "VIDEO",
  "index": 1,
  "languages": [],
  "name": "Group Trip - Some Interesting Video",
}
`;

exports[`ApolloParser > should parse "/home/data/readonly/Group Trip/videos/Some Interesting Video-1.mp4" 1`] = `
{
  "audio": [],
  "coding": [],
  "collection": false,
  "extension": ".mp4",
  "fileType": "VIDEO",
  "index": 1,
  "languages": [],
  "name": "Group Trip/Some Interesting Video",
}
`;

exports[`ApolloParser > should parse "/home/ryan/clone/Family Guy - Complete H265/Season 17 [1080p x265][MP3 5.1]/Family.Guy.S17E16 [1080p Web x265][MP3 5.1].mp4" 1`] = `
{
  "audio": [
    "mp3",
    "5.1",
  ],
  "coding": [
    "x265",
  ],
  "collection": false,
  "episodeId": "tt9652794",
  "episodeName": "You Can't Handle the Booth",
  "episodeNumber": [
    16,
  ],
  "extension": ".mp4",
  "fileType": "VIDEO",
  "imdbId": "tt0182576",
  "languages": [],
  "links": [
    {
      "id": "tt0182576",
      "name": "IMDb",
      "url": "https://imdb.com/title/tt0182576",
    },
  ],
  "name": "Family Guy",
  "poster": "https://m.media-amazon.com/images/M/MV5BODEwZjEzMjAtNjQxMy00Yjc4LWFlMDAtYjhjZTAxNDU3OTg3XkEyXkFqcGdeQXVyOTM2NTM4MjA@._V1_.jpg",
  "quality": "WEB-DL",
  "resolution": {
    "height": 1080,
    "width": null,
  },
  "seasonNumber": 17,
  "startYear": 1999,
  "titleType": 3,
}
`;

exports[`ApolloParser > should parse "/home/videos/Test Group/videos/Test Group compilation.mp4" 1`] = `
{
  "audio": [],
  "coding": [],
  "collection": false,
  "extension": ".mp4",
  "fileType": "VIDEO",
  "languages": [],
  "name": "Test Group Compilation",
}
`;

exports[`ApolloParser > should parse "/mnt/vtfs/torrents/completed/Peaky_Blinders_S01E01_x265_1080p_BluRay_30nama_30NAMA.mkv" 1`] = `
{
  "audio": [],
  "coding": [
    "x265",
  ],
  "collection": false,
  "endYear": 2022,
  "episodeId": "tt2471500",
  "episodeName": undefined,
  "episodeNumber": [
    1,
  ],
  "extension": ".mkv",
  "fileType": "VIDEO",
  "imdbId": "tt2442560",
  "languages": [],
  "links": [
    {
      "id": "tt2442560",
      "name": "IMDb",
      "url": "https://imdb.com/title/tt2442560",
    },
  ],
  "name": "Peaky Blinders",
  "poster": "https://m.media-amazon.com/images/M/MV5BZjYzZDgzMmYtYjY5Zi00YTk1LThhMDYtNjFlNzM4MTZhYzgyXkEyXkFqcGdeQXVyMTE5NDQ1MzQ3._V1_.jpg",
  "quality": "BluRay",
  "releaseGroup": "30NAMA",
  "resolution": {
    "height": 1080,
    "width": null,
  },
  "seasonNumber": 1,
  "startYear": 2013,
  "titleType": 3,
}
`;

exports[`ApolloParser > should parse "/mnt/vtfs/torrents/completed/Trailer Park Boys Season 9 [1080p] [HEVC]/S09E05 The Motel Can't Live at the Motel.mkv" 1`] = `
{
  "audio": [],
  "coding": [
    "HEVC",
  ],
  "collection": false,
  "endYear": 2018,
  "episodeId": "tt3757674",
  "episodeName": "The Motel Can't Live at the Motel",
  "episodeNumber": [
    5,
  ],
  "extension": ".mkv",
  "fileType": "VIDEO",
  "imdbId": "tt0290988",
  "languages": [],
  "links": [
    {
      "id": "tt0290988",
      "name": "IMDb",
      "url": "https://imdb.com/title/tt0290988",
    },
  ],
  "name": "Trailer Park Boys",
  "poster": "https://m.media-amazon.com/images/M/MV5BOTA0NTAwMTc1MF5BMl5BanBnXkFtZTgwODk2NjY0ODE@._V1_.jpg",
  "resolution": {
    "height": 1080,
    "width": null,
  },
  "seasonNumber": 9,
  "startYear": 2001,
  "titleType": 3,
}
`;

exports[`ApolloParser > should parse "/mnt/vtfs/torrents/completed/Trailer.Park.Boys.Season.9.[1080p].[HEVC]/S09E05.The.Motel.Can't.Live.at.the.Motel.mkv" 1`] = `
{
  "audio": [],
  "coding": [
    "HEVC",
  ],
  "collection": false,
  "endYear": 2018,
  "episodeId": "tt3757674",
  "episodeName": "The Motel Can't Live at the Motel",
  "episodeNumber": [
    5,
  ],
  "extension": ".mkv",
  "fileType": "VIDEO",
  "imdbId": "tt0290988",
  "languages": [],
  "links": [
    {
      "id": "tt0290988",
      "name": "IMDb",
      "url": "https://imdb.com/title/tt0290988",
    },
  ],
  "name": "Trailer Park Boys",
  "poster": "https://m.media-amazon.com/images/M/MV5BOTA0NTAwMTc1MF5BMl5BanBnXkFtZTgwODk2NjY0ODE@._V1_.jpg",
  "resolution": {
    "height": 1080,
    "width": null,
  },
  "seasonNumber": 9,
  "startYear": 2001,
  "titleType": 3,
}
`;

exports[`ApolloParser > should parse "/mnt/vtfs/torrents/completed/Trailer/Not a Show Season 9 [1080p] [HEVC]/S09E05.mkv" 1`] = `undefined`;

exports[`ApolloParser > should parse "/mnt/y/import/30 Rock (2005) Season 1-7 S01-S07 (1080p BluRay x265 HEVC 10bit AAC 5.1 Silence)/Season 5/30 Rock (2005) - S05E20-E21 - 100 (1080p BluRay x265 Silence).mkv" 1`] = `
{
  "audio": [],
  "coding": [
    "x265",
  ],
  "collection": false,
  "endYear": 2013,
  "episodeNumber": [
    20,
    21,
  ],
  "extension": ".mkv",
  "fileType": "VIDEO",
  "imdbId": "tt0496424",
  "languages": [],
  "links": [
    {
      "id": "tt0496424",
      "name": "IMDb",
      "url": "https://imdb.com/title/tt0496424",
    },
  ],
  "name": "30 Rock",
  "poster": "https://m.media-amazon.com/images/M/MV5BMTQ4NDQ4OTUzOV5BMl5BanBnXkFtZTcwMjMzMTUyNw@@._V1_.jpg",
  "quality": "BluRay",
  "resolution": {
    "height": 1080,
    "width": null,
  },
  "seasonNumber": 5,
  "seasons": [
    1,
    2,
    3,
    4,
    5,
    6,
    7,
  ],
  "startYear": 2006,
  "titleType": 3,
}
`;

exports[`ApolloParser > should parse "/mnt/z/Archer S01e01-10/Archer.1x05.Honeypot.1080p.BDMux.ITA.ENG.Subs.x264-Fratposa.mkv" 1`] = `
{
  "audio": [],
  "coding": [
    "x264",
  ],
  "collection": false,
  "episodeId": "tt1539157",
  "episodeName": "Mole Hunt",
  "episodeNumber": [
    1,
  ],
  "extension": ".mkv",
  "fileType": "VIDEO",
  "imdbId": "tt1486217",
  "languages": [
    "ITA",
    "ENG",
  ],
  "links": [
    {
      "id": "tt1486217",
      "name": "IMDb",
      "url": "https://imdb.com/title/tt1486217",
    },
  ],
  "name": "Archer",
  "poster": "https://m.media-amazon.com/images/M/MV5BMTg3NTMwMzY2OF5BMl5BanBnXkFtZTgwMDcxMjQ0NDE@._V1_.jpg",
  "releaseGroup": "Fratposa",
  "resolution": {
    "height": 1080,
    "width": null,
  },
  "seasonNumber": 1,
  "startYear": 2009,
  "titleType": 3,
}
`;

exports[`ApolloParser > should parse "/mnt/z/completed/Top Gear UK 1-17/Top Gear - Season 16/Top Gear - [16x00] The_Three_Wise_Men_Christmas.avi" 1`] = `
{
  "audio": [],
  "coding": [],
  "collection": false,
  "episodeId": "tt1802727",
  "episodeName": "Middle East Special",
  "episodeNumber": [
    0,
  ],
  "extension": ".avi",
  "fileType": "VIDEO",
  "imdbId": "tt1628033",
  "languages": [],
  "links": [
    {
      "id": "tt1628033",
      "name": "IMDb",
      "url": "https://imdb.com/title/tt1628033",
    },
  ],
  "name": "Top Gear",
  "poster": "https://m.media-amazon.com/images/M/MV5BYzkwZDgwZmQtOWE4Yy00ZjgyLTgxZTYtZTRiMTg5MWY4NTFiXkEyXkFqcGdeQXVyNTA4NzY1MzY@._V1_.jpg",
  "seasonNumber": 16,
  "startYear": 2002,
  "titleType": 3,
}
`;

exports[`ApolloParser > should parse "/mnt/z/torrents/completed/American Dad S01 - S13/Season 10/American Dad! - 10x04 - Crotchwalkers.mkv" 1`] = `
{
  "audio": [],
  "coding": [],
  "collection": false,
  "episodeId": "tt4134636",
  "episodeName": "Big Stan on Campus",
  "episodeNumber": [
    4,
  ],
  "extension": ".mkv",
  "fileType": "VIDEO",
  "imdbId": "tt0397306",
  "languages": [],
  "links": [
    {
      "id": "tt0397306",
      "name": "IMDb",
      "url": "https://imdb.com/title/tt0397306",
    },
  ],
  "name": "American Dad!",
  "poster": "https://m.media-amazon.com/images/M/MV5BNDRkOWIyOTUtMjg5YS00OTJjLTgwNGYtMjgxMTA0NWQ2NGI3L2ltYWdlXkEyXkFqcGdeQXVyNTAyODkwOQ@@._V1_.jpg",
  "seasonNumber": 10,
  "startYear": 2005,
  "titleType": 3,
}
`;

exports[`ApolloParser > should parse "/mnt/z/torrents/completed/American Dad S01 - S13/Season 13/American Dad! - 13x04 - N.S.A. (No Snoops Allowed).mkv" 1`] = `
{
  "audio": [],
  "coding": [],
  "collection": false,
  "episodeId": "tt7787730",
  "episodeName": "Shell Game",
  "episodeNumber": [
    4,
  ],
  "extension": ".mkv",
  "fileType": "VIDEO",
  "imdbId": "tt0397306",
  "languages": [],
  "links": [
    {
      "id": "tt0397306",
      "name": "IMDb",
      "url": "https://imdb.com/title/tt0397306",
    },
  ],
  "name": "American Dad!",
  "poster": "https://m.media-amazon.com/images/M/MV5BNDRkOWIyOTUtMjg5YS00OTJjLTgwNGYtMjgxMTA0NWQ2NGI3L2ltYWdlXkEyXkFqcGdeQXVyNTAyODkwOQ@@._V1_.jpg",
  "seasonNumber": 13,
  "startYear": 2005,
  "titleType": 3,
}
`;

exports[`ApolloParser > should parse "/mnt/z/torrents/completed/ConAir.1997.720p.BluRay.x264.AC3-RiPRG/ConAir.1997.720p.BluRay.x264.AC3-RiPRG.mkv" 1`] = `
{
  "audio": [
    "ac3",
    "ac3",
  ],
  "coding": [
    "x264",
    "x264",
  ],
  "collection": false,
  "extension": ".mkv",
  "fileType": "VIDEO",
  "imdbId": "tt0118880",
  "languages": [],
  "links": [
    {
      "id": "tt0118880",
      "name": "IMDb",
      "url": "https://imdb.com/title/tt0118880",
    },
  ],
  "name": "Con Air",
  "poster": "https://m.media-amazon.com/images/M/MV5BMGZmNGIxMTYtMmVjMy00YzhkLWIyOTktNTExZGFiYjNiNzdlXkEyXkFqcGdeQXVyMTQxNzMzNDI@._V1_.jpg",
  "quality": "BluRay",
  "releaseGroup": "RiPRG",
  "resolution": {
    "height": 720,
    "width": null,
  },
  "startYear": 1997,
  "titleType": 0,
}
`;

exports[`ApolloParser > should parse "/mnt/z/torrents/completed/Logan (2017) [1080p] [YTS.AG]/Logan.2017.1080p.BluRay.x264-[YTS.AG].mp4" 1`] = `
{
  "audio": [],
  "coding": [
    "x264",
  ],
  "collection": false,
  "extension": ".mp4",
  "fileType": "VIDEO",
  "imdbId": "tt3315342",
  "languages": [],
  "links": [
    {
      "id": "tt3315342",
      "name": "IMDb",
      "url": "https://imdb.com/title/tt3315342",
    },
  ],
  "name": "Logan",
  "poster": "https://m.media-amazon.com/images/M/MV5BYzc5MTU4N2EtYTkyMi00NjdhLTg3NWEtMTY4OTEyMzJhZTAzXkEyXkFqcGdeQXVyNjc1NTYyMjg@._V1_.jpg",
  "quality": "BluRay",
  "releaseGroup": "YTS.AG",
  "resolution": {
    "height": 1080,
    "width": null,
  },
  "startYear": 2017,
  "titleType": 0,
}
`;

exports[`ApolloParser > should parse "/mnt/z/torrents/completed/Love.Death.and.Robots.S01.ITA.ENG.1080p.NF.WEB-DLMux.DD5.1.x264-Morpheus/Love.Death.and.Robots.1x01.Il.Vantaggio.di.Sonnie.ITA.ENG.1080p.NF.WEB-DLMux.DD5.1.x264-Morpheus.mkv" 1`] = `
{
  "audio": [
    "dd5.1",
    "dd5.1",
  ],
  "coding": [
    "x264",
    "x264",
  ],
  "collection": false,
  "episodeId": "tt9781722",
  "episodeName": "Sonnie's Edge",
  "episodeNumber": [
    1,
  ],
  "extension": ".mkv",
  "fileType": "VIDEO",
  "imdbId": "tt9561862",
  "languages": [
    "ITA",
    "ENG",
    "ITA",
    "ENG",
  ],
  "links": [
    {
      "id": "tt9561862",
      "name": "IMDb",
      "url": "https://imdb.com/title/tt9561862",
    },
  ],
  "name": "Love, Death & Robots",
  "poster": "https://m.media-amazon.com/images/M/MV5BYTNiYTNkNTAtYzE3ZS00ZDQ1LWEwZTYtZjI1NzYzMWJjY2U4XkEyXkFqcGdeQXVyODk4OTc3MTY@._V1_.jpg",
  "releaseGroup": "Morpheus",
  "resolution": {
    "height": 1080,
    "width": null,
  },
  "seasonNumber": 1,
  "startYear": 2019,
  "titleType": 3,
}
`;

exports[`ApolloParser > should parse "/mnt/z/torrents/completed/Top Gear UK 1-17/Top Gear - Season 7/Top Gear - [07x06] - 2005.12.27 [GOTHiC].avi" 1`] = `
{
  "audio": [],
  "coding": [],
  "collection": false,
  "date": 2005-12-26T16:00:00.000Z,
  "episodeId": "tt0729722",
  "episodeName": "Mazda MX-5 vs. Greyhound",
  "episodeNumber": [
    6,
  ],
  "extension": ".avi",
  "fileType": "VIDEO",
  "imdbId": "tt1628033",
  "languages": [],
  "links": [
    {
      "id": "tt1628033",
      "name": "IMDb",
      "url": "https://imdb.com/title/tt1628033",
    },
  ],
  "name": "Top Gear",
  "poster": "https://m.media-amazon.com/images/M/MV5BYzkwZDgwZmQtOWE4Yy00ZjgyLTgxZTYtZTRiMTg5MWY4NTFiXkEyXkFqcGdeQXVyNTA4NzY1MzY@._V1_.jpg",
  "releaseGroup": "GOTHiC",
  "seasonNumber": 7,
  "startYear": 2002,
  "titleType": 3,
}
`;

exports[`ApolloParser > should parse "/mnt/z/torrents/completed/Top Gear UK 1-17/Top Gear - Season 10/(auto) Top Gear - 10.07.2008 - [10x01] - [Greatest road in EU].avi" 1`] = `
{
  "audio": [],
  "coding": [],
  "collection": false,
  "date": 2008-10-06T16:00:00.000Z,
  "episodeId": "tt1114654",
  "episodeName": "The Search for the Greatest Driving Road in the World",
  "episodeNumber": [
    1,
  ],
  "extension": ".avi",
  "fileType": "VIDEO",
  "imdbId": "tt1628033",
  "languages": [],
  "links": [
    {
      "id": "tt1628033",
      "name": "IMDb",
      "url": "https://imdb.com/title/tt1628033",
    },
  ],
  "name": "Top Gear",
  "poster": "https://m.media-amazon.com/images/M/MV5BYzkwZDgwZmQtOWE4Yy00ZjgyLTgxZTYtZTRiMTg5MWY4NTFiXkEyXkFqcGdeQXVyNTA4NzY1MzY@._V1_.jpg",
  "releaseGroup": "EU",
  "seasonNumber": 10,
  "startYear": 2002,
  "titleType": 3,
}
`;

exports[`ApolloParser > should parse "/mnt/z/torrents/completed/Top Gear UK 1-17/Top Gear - Season 11/(auto) Top Gear - 2008 - [11x01] - 2008.06.22 [$1k cop car].avi" 1`] = `
{
  "audio": [],
  "coding": [],
  "collection": false,
  "date": 2008-06-21T16:00:00.000Z,
  "episodeId": "tt1248080",
  "episodeName": "Police Car Challenge",
  "episodeNumber": [
    1,
  ],
  "extension": ".avi",
  "fileType": "VIDEO",
  "imdbId": "tt1628033",
  "languages": [],
  "links": [
    {
      "id": "tt1628033",
      "name": "IMDb",
      "url": "https://imdb.com/title/tt1628033",
    },
  ],
  "name": "Top Gear",
  "poster": "https://m.media-amazon.com/images/M/MV5BYzkwZDgwZmQtOWE4Yy00ZjgyLTgxZTYtZTRiMTg5MWY4NTFiXkEyXkFqcGdeQXVyNTA4NzY1MzY@._V1_.jpg",
  "seasonNumber": 11,
  "startYear": 2002,
  "titleType": 3,
}
`;

exports[`ApolloParser > should parse "/mnt/z/torrents/completed/Watchmen.S01.COMPLETE.720p.AMZN.WEBRip.x264-GalaxySERIES[TGx]/Watchmen.S01E01.720p.AMZN.WEBRip.x264-GalaxySERIES.mkv" 1`] = `
{
  "audio": [],
  "coding": [
    "x264",
  ],
  "collection": false,
  "endYear": 2019,
  "episodeId": "tt7401958",
  "episodeName": "It's Summer and We're Running Out of Ice",
  "episodeNumber": [
    1,
  ],
  "extension": ".mkv",
  "fileType": "VIDEO",
  "imdbId": "tt7049682",
  "languages": [],
  "links": [
    {
      "id": "tt7049682",
      "name": "IMDb",
      "url": "https://imdb.com/title/tt7049682",
    },
  ],
  "name": "Watchmen",
  "poster": "https://m.media-amazon.com/images/M/MV5BYjhhZDE3NjgtMjkzNC00NzI3LWJhOTItMWQ5ZjljODA5NWNkXkEyXkFqcGdeQXVyMzQ2MDI5NjU@._V1_.jpg",
  "quality": "WEB-DL",
  "releaseGroup": "GalaxySERIES",
  "resolution": {
    "height": 720,
    "width": null,
  },
  "seasonNumber": 1,
  "startYear": 2019,
  "titleType": 3,
}
`;

exports[`ApolloParser > should parse "/test/[Beatrice-Raws] Fate Stay Night - Unlimited Blade Works TV-1 [BDRip 1920x1080 HEVC TrueHD]/NC/[Beatrice-Raws] Fate Stay Night - Unlimited Blade Works (Creditless ED_ep0) [BDRip 1920x1080 HEVC TrueHD].mkv" 1`] = `
{
  "audio": [
    "truehd",
    "truehd",
  ],
  "coding": [
    "HEVC",
    "HEVC",
  ],
  "collection": false,
  "contentRating": "TV-1",
  "endYear": 2015,
  "episodeNumber": [
    0,
  ],
  "extension": ".mkv",
  "fileType": "VIDEO",
  "imdbId": "tt3621796",
  "languages": [],
  "links": [
    {
      "id": "tt3621796",
      "name": "IMDb",
      "url": "https://imdb.com/title/tt3621796",
    },
  ],
  "name": "Fate/stay night [Unlimited Blade Works]",
  "poster": "https://m.media-amazon.com/images/M/MV5BOTg5ZjI5ZTAtOWE2OS00MjY4LWI4ZDQtMzEzMDY4MTgzYWJlXkEyXkFqcGdeQXVyNjc3OTE4Nzk@._V1_.jpg",
  "quality": "BluRay",
  "releaseGroup": "TrueHD",
  "resolution": {
    "height": 1080,
    "width": 1920,
  },
  "startYear": 2014,
  "titleType": 3,
}
`;

exports[`ApolloParser > should parse "AVATAR Series (2005-2014) - COMPLETE The Last Airbender, 2010 Movie, Legend of Korra - 1080p BluRay x264\\2. The Legend of Korra (2012-14)\\Book 4a - Balance (2014)\\Avatar (TLoK) - S04 E10 - Operation Beifong (1080p - BluRay).mp4" 1`] = `
{
  "audio": [],
  "coding": [],
  "collection": false,
  "endYear": 2014,
  "episodeId": "tt4122678",
  "episodeName": "Operation Beifong",
  "episodeNumber": [
    10,
  ],
  "extension": ".mp4",
  "fileType": "VIDEO",
  "imdbId": "tt1695360",
  "languages": [],
  "links": [
    {
      "id": "tt1695360",
      "name": "IMDb",
      "url": "https://imdb.com/title/tt1695360",
    },
  ],
  "name": "The Legend of Korra",
  "poster": "https://m.media-amazon.com/images/M/MV5BYTZhNGY2ZDAtYWYxYy00YWNlLWI3NDUtNjBiM2NkMGVmODIxXkEyXkFqcGdeQXVyODUwNjEzMzg@._V1_.jpg",
  "quality": "BluRay",
  "resolution": {
    "height": 1080,
    "width": null,
  },
  "seasonNumber": 4,
  "startYear": 2012,
  "titleType": 3,
}
`;

exports[`ApolloParser > should parse "Amphibia S01E21-22 Grubhog Day & Hop Pop and Lock" 1`] = `
{
  "audio": [],
  "coding": [],
  "collection": false,
  "endYear": 2022,
  "episodeNumber": [
    21,
    22,
  ],
  "extension": undefined,
  "fileType": "VIDEO",
  "imdbId": "tt8050740",
  "languages": [],
  "links": [
    {
      "id": "tt8050740",
      "name": "IMDb",
      "url": "https://imdb.com/title/tt8050740",
    },
  ],
  "name": "Amphibia",
  "poster": "https://m.media-amazon.com/images/M/MV5BYTQyZDc3NTYtNzZlMy00ODFmLTkwZTEtZTRjODg0NTNhNDdiXkEyXkFqcGdeQXVyMTkxNjUyNQ@@._V1_.jpg",
  "seasonNumber": 1,
  "startYear": 2019,
  "titleType": 3,
}
`;

exports[`ApolloParser > should parse "Amphibia S01E21-E22 Grubhog Day & Hop Pop and Lock" 1`] = `
{
  "audio": [],
  "coding": [],
  "collection": false,
  "endYear": 2022,
  "episodeNumber": [
    21,
    22,
  ],
  "extension": undefined,
  "fileType": "VIDEO",
  "imdbId": "tt8050740",
  "languages": [],
  "links": [
    {
      "id": "tt8050740",
      "name": "IMDb",
      "url": "https://imdb.com/title/tt8050740",
    },
  ],
  "name": "Amphibia",
  "poster": "https://m.media-amazon.com/images/M/MV5BYTQyZDc3NTYtNzZlMy00ODFmLTkwZTEtZTRjODg0NTNhNDdiXkEyXkFqcGdeQXVyMTkxNjUyNQ@@._V1_.jpg",
  "seasonNumber": 1,
  "startYear": 2019,
  "titleType": 3,
}
`;

exports[`ApolloParser > should parse "Amphibia episodes 1-4" 1`] = `
{
  "audio": [],
  "coding": [],
  "collection": true,
  "endYear": 2022,
  "episodeNumber": [
    1,
    2,
    3,
    4,
  ],
  "extension": undefined,
  "fileType": "VIDEO",
  "imdbId": "tt8050740",
  "index": 4,
  "languages": [],
  "links": [
    {
      "id": "tt8050740",
      "name": "IMDb",
      "url": "https://imdb.com/title/tt8050740",
    },
  ],
  "name": "Amphibia",
  "poster": "https://m.media-amazon.com/images/M/MV5BYTQyZDc3NTYtNzZlMy00ODFmLTkwZTEtZTRjODg0NTNhNDdiXkEyXkFqcGdeQXVyMTkxNjUyNQ@@._V1_.jpg",
  "startYear": 2019,
  "titleType": 3,
}
`;

exports[`ApolloParser > should parse "Avatar (TLoK) - S03 E12 - Enter the Void (1080p - BluRay).mp4" 1`] = `
{
  "audio": [],
  "coding": [],
  "collection": false,
  "endYear": 2014,
  "episodeId": "tt3865216",
  "episodeName": "Enter the Void",
  "episodeNumber": [
    12,
  ],
  "extension": ".mp4",
  "fileType": "VIDEO",
  "imdbId": "tt1695360",
  "languages": [],
  "links": [
    {
      "id": "tt1695360",
      "name": "IMDb",
      "url": "https://imdb.com/title/tt1695360",
    },
  ],
  "name": "The Legend of Korra",
  "poster": "https://m.media-amazon.com/images/M/MV5BYTZhNGY2ZDAtYWYxYy00YWNlLWI3NDUtNjBiM2NkMGVmODIxXkEyXkFqcGdeQXVyODUwNjEzMzg@._V1_.jpg",
  "resolution": {
    "height": 1080,
    "width": null,
  },
  "seasonNumber": 3,
  "startYear": 2012,
  "titleType": 3,
}
`;

exports[`ApolloParser > should parse "BigBuckBunny_640x360.m4v" 1`] = `
{
  "audio": [],
  "coding": [],
  "collection": false,
  "extension": ".m4v",
  "fileType": "VIDEO",
  "languages": [],
  "name": "Big Buck Bunny",
  "resolution": {
    "height": 360,
    "width": 640,
  },
}
`;

exports[`ApolloParser > should parse "Bob's Burgers 2011 SE 1 - 8 Complete Eng Only Burntodisc/SE1/02 Human Flesh.mp4" 1`] = `
{
  "audio": [],
  "coding": [],
  "collection": true,
  "episodeId": "tt1646300",
  "episodeName": "Crawl Space",
  "episodeNumber": [
    2,
  ],
  "extension": ".mp4",
  "fileType": "VIDEO",
  "imdbId": "tt1561755",
  "languages": [],
  "links": [
    {
      "id": "tt1561755",
      "name": "IMDb",
      "url": "https://imdb.com/title/tt1561755",
    },
  ],
  "name": "Bob's Burgers",
  "poster": "https://m.media-amazon.com/images/M/MV5BZGJiNmM1NDctNWUxYS00YzE4LWJjNTgtYTJhYzE0NjFmMTMwXkEyXkFqcGdeQXVyNTAyODkwOQ@@._V1_.jpg",
  "seasonNumber": 1,
  "startYear": 2011,
  "titleType": 3,
}
`;

exports[`ApolloParser > should parse "Mythbusters.S2003.576p.PAL.AUS.AMZN.WEB-DL.DD+2.0.H.264 [TestGroup].mp4" 1`] = `
{
  "audio": [],
  "coding": [
    "H264",
  ],
  "collection": false,
  "extension": ".mp4",
  "fileType": "VIDEO",
  "languages": [],
  "name": "Mythbusters S2003",
  "quality": "WEB-DL",
  "resolution": {
    "height": 576,
    "width": null,
  },
}
`;

exports[`ApolloParser > should parse "Mythbusters.S2003.576p.PAL.AUS.AMZN.WEB-DL.DD+2.0.H.264-[TestGroup]" 1`] = `
{
  "audio": [],
  "coding": [
    "H264",
  ],
  "collection": false,
  "extension": undefined,
  "fileType": undefined,
  "languages": [],
  "name": "Mythbusters S2003",
  "quality": "WEB-DL",
  "releaseGroup": "TestGroup",
  "resolution": {
    "height": 576,
    "width": null,
  },
}
`;

exports[`ApolloParser > should parse "Mythbusters.S2003.576p.PAL.AUS.AMZN.WEB-DL.DD+2.0.H.264-[TestGroup].mp4" 1`] = `
{
  "audio": [],
  "coding": [
    "H264",
  ],
  "collection": false,
  "extension": ".mp4",
  "fileType": "VIDEO",
  "languages": [],
  "name": "Mythbusters S2003",
  "quality": "WEB-DL",
  "releaseGroup": "TestGroup",
  "resolution": {
    "height": 576,
    "width": null,
  },
}
`;

exports[`ApolloParser > should parse "Mythbusters.S2003.576p.PAL.AUS.AMZN.WEB-DL.DD+2.0.H.264-SmartIdiot" 1`] = `
{
  "audio": [],
  "coding": [
    "H264",
  ],
  "collection": false,
  "extension": undefined,
  "fileType": undefined,
  "languages": [],
  "name": "Mythbusters S2003",
  "quality": "WEB-DL",
  "releaseGroup": "SmartIdiot",
  "resolution": {
    "height": 576,
    "width": null,
  },
}
`;

exports[`ApolloParser > should parse "Mythbusters.S2003.576p.PAL.AUS.AMZN.WEB-DL.DD+2.0.H.264-TestGroup" 1`] = `
{
  "audio": [],
  "coding": [
    "H264",
  ],
  "collection": false,
  "extension": undefined,
  "fileType": undefined,
  "languages": [],
  "name": "Mythbusters S2003",
  "quality": "WEB-DL",
  "releaseGroup": "TestGroup",
  "resolution": {
    "height": 576,
    "width": null,
  },
}
`;

exports[`ApolloParser > should parse "Rick and Morty/Season 5/Episode 3.mp4" 1`] = `
{
  "audio": [],
  "coding": [],
  "collection": false,
  "episodeId": "tt14889192",
  "episodeName": "A Rickconvenient Mort",
  "episodeNumber": [
    3,
  ],
  "extension": ".mp4",
  "fileType": "VIDEO",
  "imdbId": "tt2861424",
  "languages": [],
  "links": [
    {
      "id": "tt2861424",
      "name": "IMDb",
      "url": "https://imdb.com/title/tt2861424",
    },
  ],
  "name": "Rick and Morty",
  "poster": "https://m.media-amazon.com/images/M/MV5BZjRjOTFkOTktZWUzMi00YzMyLThkMmYtMjEwNmQyNzliYTNmXkEyXkFqcGdeQXVyNzQ1ODk3MTQ@._V1_.jpg",
  "seasonNumber": 5,
  "startYear": 2013,
  "titleType": 3,
}
`;

exports[`ApolloParser > should parse "Se7en.1995.REMASTERED.1080p.BluRay.10bit.HEVC.6CH.MkvCage.ws.mkv" 1`] = `
{
  "audio": [
    "6ch",
  ],
  "coding": [
    "10bit",
    "HEVC",
  ],
  "collection": false,
  "extension": ".mkv",
  "fileType": "VIDEO",
  "imdbId": "tt0114369",
  "languages": [],
  "links": [
    {
      "id": "tt0114369",
      "name": "IMDb",
      "url": "https://imdb.com/title/tt0114369",
    },
  ],
  "name": "Se7en",
  "poster": "https://m.media-amazon.com/images/M/MV5BOTUwODM5MTctZjczMi00OTk4LTg3NWUtNmVhMTAzNTNjYjcyXkEyXkFqcGdeQXVyNjU0OTQ0OTY@._V1_.jpg",
  "quality": "BluRay",
  "releaseGroup": "MkvCage.ws",
  "resolution": {
    "height": 1080,
    "width": null,
  },
  "startYear": 1995,
  "titleType": 0,
}
`;

exports[`ApolloParser > should parse "The Expanse S0E0.mp4" 1`] = `
{
  "audio": [],
  "coding": [],
  "collection": false,
  "endYear": 2022,
  "episodeNumber": [
    0,
  ],
  "extension": ".mp4",
  "fileType": "VIDEO",
  "imdbId": "tt3230854",
  "languages": [],
  "links": [
    {
      "id": "tt3230854",
      "name": "IMDb",
      "url": "https://imdb.com/title/tt3230854",
    },
  ],
  "name": "The Expanse",
  "poster": "https://m.media-amazon.com/images/M/MV5BZDVmMDljM2QtZDkzZC00ZDg2LWFiMGItZjNiNjliZjg2MGEzXkEyXkFqcGdeQXVyMjkwOTAyMDU@._V1_.jpg",
  "seasonNumber": 0,
  "startYear": 2015,
  "titleType": 3,
}
`;

exports[`ApolloParser > should parse "The Hobbit & The Lord of The Rings Extended Trilogy 1080p 10bit BluRay x265 HEVC MRN/The Lord of The Rings Trilogy Extended Cut 1080p 10bit BluRay x265 HEVC 6CH -MRN/1-Fellowship.of.The.Ring.2001.Extended.Cut.1080p.10bit.BluRay.x265.HEVC.6CH-MRN.mkv" 1`] = `
{
  "audio": [
    "6ch",
  ],
  "coding": [
    "10bit",
    "x265",
    "HEVC",
  ],
  "collection": false,
  "extension": ".mkv",
  "fileType": "VIDEO",
  "imdbId": "tt0120737",
  "index": 1,
  "languages": [],
  "links": [
    {
      "id": "tt0120737",
      "name": "IMDb",
      "url": "https://imdb.com/title/tt0120737",
    },
  ],
  "name": "The Lord of the Rings: The Fellowship of the Ring",
  "poster": "https://m.media-amazon.com/images/M/MV5BN2EyZjM3NzUtNWUzMi00MTgxLWI0NTctMzY4M2VlOTdjZWRiXkEyXkFqcGdeQXVyNDUzOTQ5MjY@._V1_.jpg",
  "quality": "BluRay",
  "releaseGroup": "MRN",
  "resolution": {
    "height": 1080,
    "width": null,
  },
  "startYear": 2001,
  "titleType": 0,
}
`;

exports[`ApolloParser > should parse "The Simpsons (1989-2018) Seasons 01-29 & Movie [1080p] [Ultimate Batch] [HEVC] [x265] [pseudo]/Season 07/The Simpsons - S07E25 - Summer of 4 Ft 2 [1080p] [x265] [pseudo].mkv" 1`] = `
{
  "audio": [],
  "coding": [
    "x265",
  ],
  "collection": false,
  "endYear": 2018,
  "episodeId": "tt0701219",
  "episodeName": "Summer of 4'2\\"",
  "episodeNumber": [
    25,
  ],
  "extension": ".mkv",
  "fileType": "VIDEO",
  "imdbId": "tt0096697",
  "languages": [],
  "links": [
    {
      "id": "tt0096697",
      "name": "IMDb",
      "url": "https://imdb.com/title/tt0096697",
    },
  ],
  "name": "The Simpsons",
  "poster": "https://m.media-amazon.com/images/M/MV5BYjFkMTlkYWUtZWFhNy00M2FmLThiOTYtYTRiYjVlZWYxNmJkXkEyXkFqcGdeQXVyNTAyODkwOQ@@._V1_.jpg",
  "releaseGroup": "pseudo",
  "resolution": {
    "height": 1080,
    "width": null,
  },
  "seasonNumber": 7,
  "seasons": [
    1,
    2,
    3,
    4,
    5,
    6,
    7,
    8,
    9,
    10,
    11,
    12,
    13,
    14,
    15,
    16,
    17,
    18,
    19,
    20,
    21,
    22,
    23,
    24,
    25,
    26,
    27,
    28,
    29,
  ],
  "startYear": 1989,
  "titleType": 3,
}
`;

exports[`ApolloParser > should parse "The Simpsons (1989-2018) Seasons 01-29 & Movie [1080p] [Ultimate Batch] [HEVC] [x265] [pseudo]/Season 28/The Simpsons - S28E12E13 - The Great Phatsby [1080p] [x265] [pseudo].mkv" 1`] = `
{
  "audio": [],
  "coding": [
    "x265",
  ],
  "collection": false,
  "endYear": 2018,
  "episodeNumber": [
    12,
    13,
  ],
  "extension": ".mkv",
  "fileType": "VIDEO",
  "imdbId": "tt0096697",
  "languages": [],
  "links": [
    {
      "id": "tt0096697",
      "name": "IMDb",
      "url": "https://imdb.com/title/tt0096697",
    },
  ],
  "name": "The Simpsons",
  "poster": "https://m.media-amazon.com/images/M/MV5BYjFkMTlkYWUtZWFhNy00M2FmLThiOTYtYTRiYjVlZWYxNmJkXkEyXkFqcGdeQXVyNTAyODkwOQ@@._V1_.jpg",
  "releaseGroup": "pseudo",
  "resolution": {
    "height": 1080,
    "width": null,
  },
  "seasonNumber": 28,
  "seasons": [
    1,
    2,
    3,
    4,
    5,
    6,
    7,
    8,
    9,
    10,
    11,
    12,
    13,
    14,
    15,
    16,
    17,
    18,
    19,
    20,
    21,
    22,
    23,
    24,
    25,
    26,
    27,
    28,
    29,
  ],
  "startYear": 1989,
  "titleType": 3,
}
`;

exports[`ApolloParser > should parse "The.Walking.Dead.S01-S07.Season.1-7.1080p.10bit.BluRay.5.1.x265.HEVC" 1`] = `
{
  "audio": [
    "5.1",
  ],
  "coding": [
    "10bit",
    "x265",
    "HEVC",
  ],
  "collection": true,
  "endYear": 2022,
  "extension": undefined,
  "fileType": "VIDEO",
  "imdbId": "tt1520211",
  "languages": [],
  "links": [
    {
      "id": "tt1520211",
      "name": "IMDb",
      "url": "https://imdb.com/title/tt1520211",
    },
  ],
  "name": "The Walking Dead",
  "poster": "https://m.media-amazon.com/images/M/MV5BZmU5NTcwNjktODIwMi00ZmZkLTk4ZWUtYzVjZWQ5ZTZjN2RlXkEyXkFqcGdeQXVyMTkxNjUyNQ@@._V1_.jpg",
  "quality": "BluRay",
  "resolution": {
    "height": 1080,
    "width": null,
  },
  "seasonNumber": 1,
  "seasons": [
    1,
    2,
    3,
    4,
    5,
    6,
    7,
  ],
  "startYear": 2010,
  "titleType": 1,
}
`;

exports[`ApolloParser > should parse "Y:\\completed\\Deadpool 2016 1080p BluRay x264 DTS-JYK\\Subs\\French.srt" 1`] = `
{
  "audio": [
    "dts",
  ],
  "coding": [
    "x264",
  ],
  "collection": false,
  "extension": ".srt",
  "fileType": "SUBTITLE",
  "imdbId": "tt1431045",
  "languages": [
    "fr",
  ],
  "links": [
    {
      "id": "tt1431045",
      "name": "IMDb",
      "url": "https://imdb.com/title/tt1431045",
    },
  ],
  "name": "Deadpool",
  "poster": "https://m.media-amazon.com/images/M/MV5BYzE5MjY1ZDgtMTkyNC00MTMyLThhMjAtZGI5OTE1NzFlZGJjXkEyXkFqcGdeQXVyNjU0OTQ0OTY@._V1_.jpg",
  "quality": "BluRay",
  "releaseGroup": "JYK",
  "resolution": {
    "height": 1080,
    "width": null,
  },
  "startYear": 2016,
  "titleType": 0,
}
`;

exports[`ApolloParser > should parse "Y:\\import\\30 Rock (2005) Season 1-7 S01-S07 (1080p BluRay x265 HEVC 10bit AAC 5.1 Silence)\\Season 1\\30 Rock - S01E01.mkv" 1`] = `
{
  "audio": [],
  "coding": [],
  "collection": false,
  "endYear": 2013,
  "episodeId": "tt0849809",
  "episodeName": "Pilot",
  "episodeNumber": [
    1,
  ],
  "extension": ".mkv",
  "fileType": "VIDEO",
  "imdbId": "tt0496424",
  "languages": [],
  "links": [
    {
      "id": "tt0496424",
      "name": "IMDb",
      "url": "https://imdb.com/title/tt0496424",
    },
  ],
  "name": "30 Rock",
  "poster": "https://m.media-amazon.com/images/M/MV5BMTQ4NDQ4OTUzOV5BMl5BanBnXkFtZTcwMjMzMTUyNw@@._V1_.jpg",
  "quality": "BluRay",
  "resolution": {
    "height": 1080,
    "width": null,
  },
  "seasonNumber": 1,
  "seasons": [
    1,
    2,
    3,
    4,
    5,
    6,
    7,
  ],
  "startYear": 2006,
  "titleType": 3,
}
`;

exports[`ApolloParser > should parse "Y:\\import\\Менталист\\The.Mentalist.s07.WEB-DL.720p.Rus.Eng\\The.Mentalist.s07e12-13.WEB-DL.720p.Rus.Eng.mkv" 1`] = `
{
  "audio": [],
  "coding": [],
  "collection": false,
  "endYear": 2015,
  "episodeNumber": [
    12,
    13,
  ],
  "extension": ".mkv",
  "fileType": "VIDEO",
  "imdbId": "tt1196946",
  "languages": [],
  "links": [
    {
      "id": "tt1196946",
      "name": "IMDb",
      "url": "https://imdb.com/title/tt1196946",
    },
  ],
  "name": "The Mentalist",
  "poster": "https://m.media-amazon.com/images/M/MV5BMTQ5OTgzOTczM15BMl5BanBnXkFtZTcwMDM2OTY4MQ@@._V1_.jpg",
  "quality": "WEB-DL",
  "resolution": {
    "height": 720,
    "width": null,
  },
  "seasonNumber": 7,
  "startYear": 2008,
  "titleType": 3,
}
`;

exports[`ApolloParser > should parse "Y:\\media\\BoJack Horseman (2014) Season 1 S01 + Extras (1080p BluRay x265 HEVC 10bit AAC 5.1 RCVR)\\BoJack Horseman (2014) - S01E02 - BoJack Hates The Troops (1080p BluRay x265 RCVR).mkv" 1`] = `
{
  "audio": [
    "aac",
    "5.1",
  ],
  "coding": [
    "x265",
    "HEVC",
    "10bit",
    "x265",
  ],
  "collection": false,
  "endYear": 2020,
  "episodeId": "tt3982374",
  "episodeName": "BoJack Hates the Troops",
  "episodeNumber": [
    2,
  ],
  "extension": ".mkv",
  "fileType": "VIDEO",
  "imdbId": "tt3398228",
  "languages": [],
  "links": [
    {
      "id": "tt3398228",
      "name": "IMDb",
      "url": "https://imdb.com/title/tt3398228",
    },
  ],
  "name": "BoJack Horseman",
  "poster": "https://m.media-amazon.com/images/M/MV5BYWQwMDNkM2MtODU4OS00OTY3LTgwOTItNjE2Yzc0MzRkMDllXkEyXkFqcGdeQXVyMTkxNjUyNQ@@._V1_.jpg",
  "quality": "BluRay",
  "resolution": {
    "height": 1080,
    "width": null,
  },
  "seasonNumber": 1,
  "startYear": 2014,
  "titleType": 3,
}
`;

exports[`ApolloParser > should parse "Y:\\torrents\\BoJack Horseman (2014) Season 1 S01 + Extras (1080p BluRay x265 HEVC 10bit AAC 5.1 RCVR)\\Featurettes\\Side-by-side Animation Walk-Through.mkv" 1`] = `undefined`;

exports[`ApolloParser > should parse "Z:\\clone\\www.Torrenting.org       The Mandalorian S01E01 INTERNAL 1080p WEB H264-DEFLATE\\The.Mandalorian.S01E01.INTERNAL.1080p.WEB.H264-DEFLATE.mkv" 1`] = `
{
  "audio": [],
  "coding": [
    "H264",
    "H264",
  ],
  "collection": false,
  "episodeId": "tt9095424",
  "episodeName": "Chapter 1: The Mandalorian",
  "episodeNumber": [
    1,
  ],
  "extension": ".mkv",
  "fileType": "VIDEO",
  "imdbId": "tt8111088",
  "languages": [],
  "links": [
    {
      "id": "tt8111088",
      "name": "IMDb",
      "url": "https://imdb.com/title/tt8111088",
    },
  ],
  "name": "The Mandalorian",
  "poster": "https://m.media-amazon.com/images/M/MV5BZDhlMzY0ZGItZTcyNS00ZTAxLWIyMmYtZGQ2ODg5OWZiYmJkXkEyXkFqcGdeQXVyODkzNTgxMDg@._V1_.jpg",
  "quality": "WEB-DL",
  "releaseGroup": "DEFLATE",
  "resolution": {
    "height": 1080,
    "width": null,
  },
  "seasonNumber": 1,
  "startYear": 2019,
  "titleType": 3,
}
`;

exports[`ApolloParser > should parse "Z:\\torrents\\completed\\[TorrentCouch.com].Silicon.Valley.S05.Complete.720p.BRRip.x264.ESubs.[1.6GB].[Season.5.Full]\\[TorrentCouch.com].Silicon.Valley.S05E01.720p.BRRip.x264.ESubs.mkv" 1`] = `
{
  "audio": [],
  "coding": [
    "x264",
    "x264",
  ],
  "collection": true,
  "endYear": 2019,
  "episodeId": "tt6973218",
  "episodeName": "Grow Fast or Die Slow",
  "episodeNumber": [
    1,
  ],
  "extension": ".mkv",
  "fileType": "VIDEO",
  "imdbId": "tt2575988",
  "languages": [],
  "links": [
    {
      "id": "tt2575988",
      "name": "IMDb",
      "url": "https://imdb.com/title/tt2575988",
    },
  ],
  "name": "Silicon Valley",
  "poster": "https://m.media-amazon.com/images/M/MV5BM2Q5YjNjZWMtYThmYy00N2ZjLWE2NDctNmZjMmZjYWE2NjEwXkEyXkFqcGdeQXVyMTAzMDM4MjM0._V1_.jpg",
  "quality": "BluRay",
  "releaseGroup": "TorrentCouch.com",
  "resolution": {
    "height": 720,
    "width": null,
  },
  "seasonNumber": 5,
  "startYear": 2014,
  "titleType": 3,
}
`;

exports[`ApolloParser > should parse "Z:\\torrents\\completed\\2012 (2009) [1080p]\\2012.2009.BluRay.1080p.x264.YIFY.mp4" 1`] = `
{
  "audio": [],
  "coding": [
    "x264",
  ],
  "collection": false,
  "extension": ".mp4",
  "fileType": "VIDEO",
  "imdbId": "tt1190080",
  "languages": [],
  "links": [
    {
      "id": "tt1190080",
      "name": "IMDb",
      "url": "https://imdb.com/title/tt1190080",
    },
  ],
  "name": "2012",
  "poster": "https://m.media-amazon.com/images/M/MV5BMTY0MjEyODQzMF5BMl5BanBnXkFtZTcwMTczMjQ4Mg@@._V1_.jpg",
  "quality": "BluRay",
  "releaseGroup": "YIFY",
  "resolution": {
    "height": 1080,
    "width": null,
  },
  "startYear": 2009,
  "titleType": 0,
}
`;

exports[`ApolloParser > should parse "Z:\\torrents\\completed\\AVATAR Series (2005-2014) - COMPLETE The Last Airbender, 2010 Movie, Legend of Korra - 1080p BluRay x264\\2. The Legend of Korra (2012-14)\\Book 2a - Republic City Hustle (2013)\\Avatar (TLoK) - Republic City Hustle, Part 3 of 3 (1080p).mp4" 1`] = `
{
  "audio": [],
  "coding": [],
  "collection": false,
  "endYear": 2014,
  "episodeId": "tt3797656",
  "episodeName": "The Earth Queen",
  "episodeNumber": [
    3,
  ],
  "extension": ".mp4",
  "fileType": "VIDEO",
  "imdbId": "tt1695360",
  "languages": [],
  "links": [
    {
      "id": "tt1695360",
      "name": "IMDb",
      "url": "https://imdb.com/title/tt1695360",
    },
  ],
  "name": "The Legend of Korra",
  "poster": "https://m.media-amazon.com/images/M/MV5BYTZhNGY2ZDAtYWYxYy00YWNlLWI3NDUtNjBiM2NkMGVmODIxXkEyXkFqcGdeQXVyODUwNjEzMzg@._V1_.jpg",
  "quality": "BluRay",
  "resolution": {
    "height": 1080,
    "width": null,
  },
  "seasonNumber": 3,
  "startYear": 2012,
  "titleType": 3,
}
`;

exports[`ApolloParser > should parse "Z:\\torrents\\completed\\The EXPANSE - Complete Season 3 S03 (2018) - 1080p AMZN Web-DL x264\\The EXPANSE - S03 E11 - Fallen World (1080p - AMZN Web-DL).mp4" 1`] = `
{
  "audio": [],
  "coding": [],
  "collection": false,
  "endYear": 2022,
  "episodeId": "tt6665354",
  "episodeName": "Fallen World",
  "episodeNumber": [
    11,
  ],
  "extension": ".mp4",
  "fileType": "VIDEO",
  "imdbId": "tt3230854",
  "languages": [],
  "links": [
    {
      "id": "tt3230854",
      "name": "IMDb",
      "url": "https://imdb.com/title/tt3230854",
    },
  ],
  "name": "The Expanse",
  "poster": "https://m.media-amazon.com/images/M/MV5BZDVmMDljM2QtZDkzZC00ZDg2LWFiMGItZjNiNjliZjg2MGEzXkEyXkFqcGdeQXVyMjkwOTAyMDU@._V1_.jpg",
  "quality": "WEB-DL",
  "resolution": {
    "height": 1080,
    "width": null,
  },
  "seasonNumber": 3,
  "startYear": 2015,
  "titleType": 3,
}
`;

exports[`ApolloParser > should parse "Z:\\torrents\\completed\\The Hunger Games 4 Film Complete Collection 1080p BluRay 5.1Ch x265 HEVC SUJAIDR\\The Hunger Games Mockingjay Part 2 (2015) 1080p BluRay 5.1Ch x265 HEVC SUJAIDR.mkv" 1`] = `
{
  "audio": [],
  "coding": [
    "x265",
    "HEVC",
  ],
  "collection": false,
  "extension": ".mkv",
  "fileType": "VIDEO",
  "imdbId": "tt1951266",
  "languages": [],
  "links": [
    {
      "id": "tt1951266",
      "name": "IMDb",
      "url": "https://imdb.com/title/tt1951266",
    },
  ],
  "name": "The Hunger Games: Mockingjay - Part 2",
  "poster": "https://m.media-amazon.com/images/M/MV5BNjQzNDI2NTU1Ml5BMl5BanBnXkFtZTgwNTAyMDQ5NjE@._V1_.jpg",
  "quality": "BluRay",
  "releaseGroup": "SUJAIDR",
  "resolution": {
    "height": 1080,
    "width": null,
  },
  "startYear": 2015,
  "titleType": 0,
}
`;
